src/main/kotlin/com/example/apitareas/error/ErrorRespuesta.kt
package com.example.apitareas.error

data class ErrorRespuesta(val message: String, val uri: String) {
}